src/styles.css
/*================================================

General

================================================*/

* {
  box-sizing: border-box;
}

html{
  background-color: #000;
  height: 100%;
}

body {
  height: 100%;
  background: #222;
  background: radial-gradient(#333, #111);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;
  font: 100%/1.5 sans-serif;
  overflow: hidden;
  margin: 0;
}

/*================================================
  
  Score
  
  ================================================*/

.score {
  color: rgba(255, 255, 255, 0.5);
  font-size: 2.5rem;
  font-weight: bold;
  padding-top: 5px;
  text-align: center;
}

/*================================================
  
  Stage
  
  ================================================*/

.stage {
  bottom: 0;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 2;
}

/*================================================
  
  Tiles
  
  ================================================*/

.tile {
  background: rgba(0, 0, 0, 0.15);
  position: absolute;
  transition-property: background, box-shadow, opacity, transform;
  transform: translateZ(0);
  transition-duration: 3000ms;
}

.tile:before {
  bottom: 0;
  content: "";
  height: 0;
  left: 0;
  margin: auto;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 0;
  transition: opacity 300ms;
}

.tile.path:before {
  opacity: 1;
}

.tile.up:before {
  border-bottom: 4px inset rgba(255, 255, 255, 0.15);
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
}

.tile.down:before {
  border-top: 4px inset rgba(255, 255, 255, 0.15);
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
}

.tile.left:before {
  border-right: 4px inset rgba(255, 255, 255, 0.15);
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
}

.tile.right:before {
  border-left: 4px inset rgba(255, 255, 255, 0.15);
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
}

@media (max-width: 900px), (max-height: 900px) {
  .tile.up:before,
  .tile.down:before,
  .tile.left:before,
  .tile.right:before {
    border-width: 3px;
  }
}

@media (max-width: 500px), (max-height: 500px) {
  .tile.up:before,
  .tile.down:before,
  .tile.left:before,
  .tile.right:before {
    border-width: 2px;
  }
}

.tile.pressed {
  background: rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.6);
  transition-duration: 0ms;
}

/*================================================

Scoreboard

================================================*/

.boardContainer{
  position: relative;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.board {
  margin: auto;
  padding: 5px;
  text-align: center;
  list-style: none;
  z-index: 20;
  height: 50vh;
  overflow-y: auto;
}

.board:first-child{
  margin-top: 0.5rem;
}

.board button {
  margin-top: auto;
}

.sbItem {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: center;
  min-width: 50vw;
  max-width: 95vw;
  margin-bottom: 0.125rem;
}

.sbItem span {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.place{
  text-align: right;
  min-width: 2rem;
}

.place::after {
  content: ".";
}

.playerName {
  width: 100%;
  text-align: left;
}

.playerScore{
  text-align: center;
  min-width: 2rem;
}

.startBtn {
  margin-top: 2rem;
  margin-bottom: 1rem;
  padding: 0.5rem;
  /* background: rgba(0, 0, 0, 0.5); */
  background: none;
  color: #fff;
  border: none;
  border-radius: 10px;
  z-index: 25;
}

.header {
  font-size: 2.5rem;
  font-weight: bold;
  display: block;
  z-index: 15;
}

.current {
  background: rgba(0, 0, 0, 0.5); 
}

.controls {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  position: absolute;
   bottom: .5rem;
  z-index: 20;
  width: 100%;
}



#left, #right {
  /* background: rgba(0, 0, 0, 0.5); */
  background: none;
  color: #fff;
  border: none;
  border-radius: 10px;
  padding: 0.5rem;
  z-index: 25;
  margin-left: 2rem;
  margin-right: 2rem;
}

.h-6 {
  height: 10vh;
}

.w-6 {
  width: 10vh;
}

@media screen and (min-width: 900px) {
  .controls {
    top: 50%;
    left: 0;
    width: 100%;
    transform: translateY(-50%);
  }
  #left {
    position: absolute;
    left: 0;
    margin-left: 1rem;
  }
  #right {
    position: absolute;
    right: 0;
    margin-right: 1rem;
  }
  .boardContainer{
    font-size: 2.5rem;
  }
  .header{
    font-size: 8rem;
  }
}

.lastScore {
  color: rgba(255, 255, 255, 0.5)
}

